@@ -373,6 +373,9 @@ Trunk (unreleased changes)
     HADOOP-5857. Move normal java methods from hdfs .jsp files to .java files.
     (szetszwo)
 
+    HADOOP-5873. Remove deprecated methods randomDataNode() and
+    getDatanodeByIndex(..) in FSNamesystem.  (szetszwo)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
